HPCC-22475 ESP service to sign ECL code
- Create ecm and other source files for the service
- Add deployment and configuration scripts for the service
- Implement the Sign functions with gpg
- Add xslt file to display sign response in a more readable format
- Make it work with both gpg 1 and 2

Signed-off-by: mayx <yanrui.ma@lexisnexisrisk.com>

--- a/esp/eclwatch/ws_XSLT/CMakeLists.txt
+++ b/esp/eclwatch/ws_XSLT/CMakeLists.txt
@@ -175,6 +175,7 @@ FOREACH ( iFILES
     ${CMAKE_CURRENT_SOURCE_DIR}/account.xslt
     ${CMAKE_CURRENT_SOURCE_DIR}/account_input.xslt
     ${CMAKE_CURRENT_SOURCE_DIR}/account_myaccount.xslt
+    ${CMAKE_CURRENT_SOURCE_DIR}/codesign.xslt
 )
     Install ( FILES ${iFILES} DESTINATION componentfiles/smc_xslt COMPONENT Runtime )
 ENDFOREACH ( iFILES )
