--- a/esp/services/CMakeLists.txt
+++ b/esp/services/CMakeLists.txt
@@ -39,3 +39,4 @@ endif()
 HPCC_ADD_SUBDIRECTORY (espcontrol "PLATFORM")
 HPCC_ADD_SUBDIRECTORY (ws_elk "PLATFORM")
 HPCC_ADD_SUBDIRECTORY (ws_store "PLATFORM")
+HPCC_ADD_SUBDIRECTORY (ws_codesign "PLATFORM")
