HPCC-17585 SOAPCALL support for persistent outgoing connections
- Improvements based on latest code review, use atomic bool,
  change from set of Linked to Owned objects, clean up empty
  socket set, and construct key string in constructor.

Signed-off-by: Yanrui Ma <yanrui.ma@lexisnexisrisk.com>

--- a/common/thorhelper/CMakeLists.txt
+++ b/common/thorhelper/CMakeLists.txt
@@ -68,8 +68,8 @@ set (    SRCS
          thorrparse.ipp
          thorsort.cpp
          thorsort.hpp
-         ../../esp/platform/persistent.cpp
-         ../../esp/platform/persistent.hpp
+         ${HPCC_SOURCE_DIR}/esp/platform/persistent.cpp
+         ${HPCC_SOURCE_DIR}/esp/platform/persistent.hpp
          
          roxiedebug.hpp
          roxiedebug.ipp
